--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:url" content="https://archive.webusta.org/">
     <meta property="og:title" content="Archive - ZIP Preview Studio">
     <meta property="og:description" content="Preview ZIP files directly in your browser. View HTML, React, Next.js sites and more. Fast, secure, 100% client-side.">
-    <meta property="og:image" content="https://archive.webusta.org/logo-dark.png">
+    <meta property="og:image" content="https://archive.webusta.org/og-image.jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Archive">
@@ -37,7 +37,7 @@
     <meta name="twitter:url" content="https://archive.webusta.org/">
     <meta name="twitter:title" content="Archive - ZIP Preview Studio">
     <meta name="twitter:description" content="Preview ZIP files directly in your browser. View HTML, React, Next.js sites and more. Fast, secure, 100% client-side.">
-    <meta name="twitter:image" content="https://archive.webusta.org/logo-dark.png">
+    <meta name="twitter:image" content="https://archive.webusta.org/og-image.jpeg">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="logo-dark.png">
